# rules_cocotb

./: MODULE.bazel  README.md  WORKSPACE.bazel  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: bcr-publish.yaml  ci.yml  compile-requirements.yaml  release.yaml  release_prep.sh
cocotb/: BUILD.bazel  cocotb_activehdl_sim.bzl  cocotb_dsim_sim.bzl  cocotb_ghdl_sim.bzl  cocotb_icarus_sim.bzl  cocotb_nvc_sim.bzl  cocotb_questa_sim.bzl  cocotb_riviera_sim.bzl  cocotb_test.bzl  cocotb_toolchain.bzl  cocotb_vcs_sim.bzl  cocotb_verilator_sim.bzl  cocotb_xcelium_sim.bzl  defs.bzl
cocotb/private/: BUILD.bazel  cocotb_precompiled_library_info.bzl  cocotb_simulators.bzl  cocotb_test.bzl  cocotb_toolchain.bzl
cocotb/private/simulators/: BUILD.bazel  cocotb_activehdl.bzl  cocotb_dsim.bzl  cocotb_ghdl.bzl  cocotb_icarus.bzl  cocotb_nvc.bzl  cocotb_questa.bzl  cocotb_riviera.bzl  cocotb_sim_utils.bzl  cocotb_vcs.bzl  cocotb_verilator.bzl  cocotb_xcelium.bzl
cocotb/toolchain/: BUILD.bazel
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md  rules.md  simulators.md
examples/simple/: BUILD.bazel  MODULE.bazel  README.md  adder_test.py  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
tests/ghdl/: BUILD.bazel  adder_test.py  counter_test.py
tests/icarus/: BUILD.bazel  adder.sv  adder_test.py  counter.sv  counter_reg.sv  counter_test.py  counter_wrap.sv
tests/nvc/: BUILD.bazel  counter_reg.vhd  counter_wrap.vhd
tests/verilator/: BUILD.bazel  counter.sv  counter_reg.sv  counter_wrap.sv
tools/cocotb_process_wrapper/: BUILD.bazel  cocotb_process_wrapper.py
tools/constraints/: BUILD.bazel
tools/coverage/: BUILD.bazel
tools/nvc_libdir_stage/: BUILD.bazel
tools/repo_version/: version_test.py
tools/requirements/: BUILD.bazel  dev_requirements.in
tools/toolchains/: BUILD.bazel
