load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_rust_mdbook//:defs.bzl", "mdbook", "mdbook_server")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

stardoc(
    name = "cocotb_test_doc",
    out = "src/cocotb_test.md",
    input = "//cocotb:cocotb_test.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_toolchain_doc",
    out = "src/cocotb_toolchain.md",
    input = "//cocotb:cocotb_toolchain.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_ghdl_sim_doc",
    out = "src/cocotb_ghdl_sim.md",
    input = "//cocotb:cocotb_ghdl_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_icarus_sim_doc",
    out = "src/cocotb_icarus_sim.md",
    input = "//cocotb:cocotb_icarus_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_verilator_sim_doc",
    out = "src/cocotb_verilator_sim.md",
    input = "//cocotb:cocotb_verilator_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_riviera_sim_doc",
    out = "src/cocotb_riviera_sim.md",
    input = "//cocotb:cocotb_riviera_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_activehdl_sim_doc",
    out = "src/cocotb_activehdl_sim.md",
    input = "//cocotb:cocotb_activehdl_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_questa_sim_doc",
    out = "src/cocotb_questa_sim.md",
    input = "//cocotb:cocotb_questa_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_xcelium_sim_doc",
    out = "src/cocotb_xcelium_sim.md",
    input = "//cocotb:cocotb_xcelium_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_vcs_sim_doc",
    out = "src/cocotb_vcs_sim.md",
    input = "//cocotb:cocotb_vcs_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_dsim_sim_doc",
    out = "src/cocotb_dsim_sim.md",
    input = "//cocotb:cocotb_dsim_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

stardoc(
    name = "cocotb_nvc_sim_doc",
    out = "src/cocotb_nvc_sim.md",
    input = "//cocotb:cocotb_nvc_sim.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//cocotb:bzl_lib"],
)

mdbook(
    name = "book",
    srcs = glob(["src/**/*.md"]) + [
        ":cocotb_activehdl_sim_doc",
        ":cocotb_dsim_sim_doc",
        ":cocotb_ghdl_sim_doc",
        ":cocotb_icarus_sim_doc",
        ":cocotb_nvc_sim_doc",
        ":cocotb_questa_sim_doc",
        ":cocotb_riviera_sim_doc",
        ":cocotb_test_doc",
        ":cocotb_toolchain_doc",
        ":cocotb_vcs_sim_doc",
        ":cocotb_verilator_sim_doc",
        ":cocotb_xcelium_sim_doc",
    ],
    book = "book.toml",
    # Windows builds are typically super slow in CI so they're avoided.
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

alias(
    name = "docs",
    actual = ":book",
    tags = ["manual"],
)

mdbook_server(
    name = "server",
    book = ":book",
    tags = ["manual"],
)

sh_binary(
    name = "publish_book",
    srcs = ["publish_book.sh"],
    data = [":book"],
    env = {"BOOK_DIR": "$(rootpath :book)"},
    tags = ["manual"],
)
