load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("//cocotb:defs.bzl", "cocotb_test")

# Arbitrary file as env input test for cocotb.
write_file(
    name = "sample_file",
    out = "sample_file.txt",
    content = ["THIS IS A TEST FILE"],
    newline = "unix",
)

verilog_library(
    name = "adder",
    srcs = ["adder.sv"],
)

cocotb_test(
    name = "adder_test",
    srcs = ["adder_test.py"],
    data = [":sample_file"],
    env = {"LOCATION": "$(rlocationpath :sample_file)"},
    module = ":adder",
    sim = "verilator",
    # Verilator is currently only supported on linux x86_64 systems.
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

verilog_library(
    name = "counter",
    srcs = ["counter.sv"],
)

cocotb_test(
    name = "counter_test",
    srcs = ["counter_test.py"],
    module = ":counter",
    sim = "verilator",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# Regression: cocotb sim integrations must stage transitive
# `verilog_library` deps. `counter_wrap` names `counter_reg` (a separate
# library) as its inner module — if `collect_hdl_sources` fails to walk
# `VerilogInfo.deps`, verilator elaborates against only `counter_wrap.sv`
# and fails with `Cannot find module: counter_reg`.
verilog_library(
    name = "counter_reg",
    srcs = ["counter_reg.sv"],
)

verilog_library(
    name = "counter_wrap",
    srcs = ["counter_wrap.sv"],
    deps = [":counter_reg"],
)

cocotb_test(
    name = "counter_wrap_test",
    srcs = ["counter_test.py"],
    module = ":counter_wrap",
    sim = "verilator",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)
